<resources>
    <string name="app_name">Apollo Archery</string>
    <string name="login_screen_label">Login</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_button_ca">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="new_round_btn">new_round</string>
    <string name="profile_main_btn">profile_main</string>
    <string name="arrow_counter_btn">arrow_counter</string>
    <string name="site_mark_btn">site_mark</string>
    <string name="new_round">New Round</string>
    <string name="profile">Profile</string>
    <string name="arrow_counter">Arrow Counter</string>
    <string name="image_profile">p-image</string>
    <string name="site_marks">Site Marks</string>
    <string name="_000">000</string>
    <string name="arrows_shot_today">Arrows shot today</string>
    <string name="nothing_saved_yet">Nothing saved yet!.</string>
    <string name="history_image">history image</string>
    <string name="_04_14_2023">04/14/2023</string>
    <string name="history_rule_name">history rule name</string>
    <string name="_1437_1410">1437/1410</string>
    <string name="round_selection_label">Round Selection</string>
    <string name="equipment_label">Equipment</string>
    <string name="bow">Bow</string>
    <string name="arrow_selection_label">Arrow</string>
    <string name="rules_selection_label">Rules</string>
    <string name="format">Format</string>
    <string name="round_setup_label">Round Setup</string>
    <string name="_0_0">0/0</string>
    <string name="start_round_btn">START ROUND</string>
    <string name="shooting_label_text">Shooting</string>
    <string name="undo">UNDO</string>
    <string name="next">Next</string>
    <string name="continue_round">Continue Round</string>
    <string name="six_bn">six btn</string>
    <string name="seven_bn">seven btn</string>
    <string name="eight_bn">eight btn</string>
    <string name="nine_bn">nine btn</string>
    <string name="ten_bn">ten btn</string>
    <string name="bullseye_bn">bullseye btn</string>
    <string name="miss_bn">miss btn</string>
    <string name="one_bn">one btn</string>
    <string name="two_bn">two btn</string>
    <string name="three_bn">three btn</string>
    <string name="five_bn">five btn</string>
    <string name="arrows">Arrows</string>
    <string name="end_total">E/T</string>
    <string name="running_total">R/T</string>
    <string name="four_bn">four bn</string>
    <string name="archer_signature">Archer Signature</string>
    <string name="scorer_signature">Scorer Signature</string>
    <string name="compound_bow">Compound Bow</string>
    <string name="large_diameter">Large Diameter</string>
    <string name="small_diameter">Small Diameter</string>
    <string name="recurve_bow">Recurve Bow</string>
    <string name="sight_mark_add">sight mark add</string>
    <string name="neg">-</string>
    <string name="pos">+</string>
    <string name="save">save</string>
    <string name="sight_marks_label">Sight Marks</string>
    <string name="profile_button">profile_</string>
    <string name="delete">delete</string>
    <string name="take_picture">take_picture</string>
    <string name="save_">save</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_address_">Email Address</string>
    <string name="send">SEND</string>
    <string name="email_reset">Email</string>
    <string name="image_reset">reset</string>


</resources>