<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <ImageView
        android:id="@+id/new_round_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:clickable="true"
        android:src="@drawable/new_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/new_round_btn"
        android:focusable="true" />

    <ImageView
        android:id="@+id/profile_btn_main"
        android:layout_width="134dp"
        android:layout_height="123dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        android:contentDescription="@string/profile_main_btn"
        android:focusable="true"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/new_round_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrow_counter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="72dp"
        android:clickable="true"
        android:src="@drawable/arrow_counter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_round_btn"
        android:contentDescription="@string/arrow_counter_btn"
        android:focusable="true" />

    <ImageView
        android:id="@+id/sitemarks_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="45dp"
        android:clickable="true"
        android:src="@drawable/sitemark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/arrow_counter_btn"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn_main"
        android:contentDescription="@string/site_mark_btn"
        android:focusable="true" />

    <TextView
        android:id="@+id/new_round_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="9dp"
        android:text="@string/new_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_round_btn" />

    <TextView
        android:id="@+id/profile_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="89dp"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn_main" />

    <TextView
        android:id="@+id/arrow_cout_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="16dp"
        android:text="@string/arrow_counter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_counter_btn" />

    <TextView
        android:id="@+id/site_mark_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="75dp"
        android:text="@string/site_marks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sitemarks_btn" />

    <TextView
        android:id="@+id/arrow_count_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/arrows_shot_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/arrows_shot_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="46dp"
        android:text="@string/arrows_shot_today"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>