<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/history_image"
        android:layout_width="60dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/history_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/archery_target" />

    <TextView
        android:id="@+id/history_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/_04_14_2023"
        app:layout_constraintStart_toEndOf="@+id/history_image"
        app:layout_constraintTop_toTopOf="@+id/history_image" />

    <TextView
        android:id="@+id/history_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/history_rule_name"
        app:layout_constraintStart_toEndOf="@+id/history_date"
        app:layout_constraintTop_toTopOf="@+id/history_date" />

    <TextView
        android:id="@+id/history_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/_1437_1410"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/history_name"
        app:layout_constraintTop_toTopOf="@+id/history_name" />
</androidx.constraintlayout.widget.ConstraintLayout>