<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RoundSetupFragment">

    <TextView
        android:id="@+id/round_selection_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="147dp"
        android:fontFamily="sans-serif"
        android:text="@string/round_setup_label"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/equipment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/equipment_label"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_selection_label" />

    <TextView
        android:id="@+id/bow_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/bow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equipment_label" />

    <Spinner
        android:id="@+id/bow_spinner"
        android:layout_width="275dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="@+id/equipment_label"
        app:layout_constraintTop_toTopOf="@+id/bow_label"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/arrow_spinner"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/arrow_label"
        app:layout_constraintTop_toBottomOf="@+id/bow_spinner" />

    <Spinner
        android:id="@+id/rules_selection_spinner"
        android:layout_width="265dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="@+id/format_label"
        app:layout_constraintTop_toTopOf="@+id/rules_selection_label" />

    <TextView
        android:id="@+id/arrow_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/arrow_selection_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/arrow_spinner" />

    <TextView
        android:id="@+id/rules_selection_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/rules_selection_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/format_label" />

    <TextView
        android:id="@+id/format_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:text="@string/format"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_spinner" />

    <Button
        android:id="@+id/start_round_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="136dp"
        android:text="@string/start_round_btn"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rules_selection_spinner"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
