<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArrowCounterActivity">

    <Button
        android:id="@+id/arrow_counter_minus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arrow_counter"
        android:layout_centerInParent="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="106dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/neg"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_counter" />

    <Button
        android:id="@+id/arrow_counter_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/arrow_counter"
        android:layout_centerInParent="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="106dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/pos"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="178dp"
        android:text="@string/arrow_counter"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/arrow_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="121dp"
        android:text="@string/_000"
        android:textSize="100sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_counter_add" />

</androidx.constraintlayout.widget.ConstraintLayout>